--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,37 +1,46 @@
 ---
- const personalImageAlt = "Miguel Ángel"
+const personalImageAlt = "Roberto Fucugauchi";
 ---
 
-<article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
-  <div
-    class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
-  >
-    <p>
-      Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
-      >.
-    </p>
+<article
+    class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
+>
+    <div
+        class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
+    >
+        <p>
+            Me llamo Roberto Fucugauchi, pero me dicen Fucu. Empecé en la
+            programación con C++, tenía 16 años. Actualmente formo <strong
+                >parte de equipos en multinacionales</strong
+            >.
+        </p>
 
-    <p>
-      Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
-    </p>
+        <p>
+            Algunos de mis éxitos incluyen <strong
+                >colaborar con equipos de desarrollo extranjeros, viniendo de
+                países como India, Estados Unidos, Nueva Zelanda y Canadá</strong
+            >. Considero estas hazañas como mis primeros grandes logros en el
+            ámbito del desarrollo.
+        </p>
 
-    <p>
-      Como creador de contenido, <strong
-        >cuento con el canal de habla hispana más visto del mundo en la
-        categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
-      >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
-      acceso a contenido de calidad.
-    </p>
-  </div>
+        <p>
+            Como desarrollador ABAP cuento con certificación en <strong
+                >SAP Certified Development Associate - ABAP with SAP NetWeaver
+                7.50
+            </strong>. Verificable en el siguiente <a
+                href="https://www.credly.com/go/THZtUF5f">enlace</a
+            >
+        </p>
+    </div>
 
-  <img width="200" height="200" src="/me.png" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-
+    <img
+        width="200"
+        height="200"
+        src="/roberto.jpg"
+        alt={personalImageAlt}
+        class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
+        style="object-position: 50% 50%"
+    />
 </article>
 
 <!-- FRASES PROHIBIDAS EN VUESTRO PORTFOLIO
